--- a/drivers/scsi/Kconfig
+++ b/drivers/scsi/Kconfig
@@ -264,10 +264,14 @@ config SCSI_SCAN_ASYNC
 	  or async on the kernel's command line.
 
 config SCSI_WAIT_SCAN
-	tristate  # No prompt here, this is an invisible symbol.
+	tristate "SCSI wait scan"
 	default m
 	depends on SCSI
 	depends on MODULES
+	help
+	  Waits for SCSI low-level drivers to finish scanning.
+
+          Say "m" unless you know what you are doing.
 # scsi_wait_scan is a loadable module which waits until all the async scans are
 # complete.  The idea is to use it in initrd/ initramfs scripts.  You modprobe
 # it after all the modprobes of the root SCSI drivers and it will wait until
@@ -276,9 +280,8 @@ config SCSI_WAIT_SCAN
 # parallel with the initiator, or with transports with non-deterministic target
 # discovery schemes, or if a transport driver does not support scsi_wait_scan.)
 #
-# This symbol is not exposed as a prompt because little is to be gained by
-# disabling it, whereas people who accidentally switch it off may wonder why
-# their mkinitrd gets into trouble.
+# People who accidentally switch it off may wonder why their mkinitrd gets into
+# trouble.
 
 menu "SCSI Transports"
 	depends on SCSI
