--- a/drivers/input/mouse/Kconfig
+++ b/drivers/input/mouse/Kconfig
@@ -151,8 +151,7 @@ config MOUSE_SERIAL
 
 config MOUSE_APPLETOUCH
 	tristate "Apple USB Touchpad support"
-	depends on USB_ARCH_HAS_HCD
-	select USB
+	depends on USB && USB_ARCH_HAS_HCD
 	help
 	  Say Y here if you want to use an Apple USB Touchpad.
 
@@ -172,8 +171,7 @@ config MOUSE_APPLETOUCH
 
 config MOUSE_BCM5974
 	tristate "Apple USB BCM5974 Multitouch trackpad support"
-	depends on USB_ARCH_HAS_HCD
-	select USB
+	depends on USB && USB_ARCH_HAS_HCD
 	help
 	  Say Y here if you have an Apple USB BCM5974 Multitouch
 	  trackpad.
