Make the kernel configuration for iMX6 boards more flexible -- less hard-coded configs
Conflicts:
	arch/arm/mach-mx6/Kconfig

--- a/arch/arm/mach-mx6/Kconfig
+++ b/arch/arm/mach-mx6/Kconfig
@@ -2,21 +2,11 @@ if ARCH_MX6
 
 config ARCH_MX6Q
 	bool
-	select USB_ARCH_HAS_EHCI
 	select ARCH_MXC_IOMUX_V3
-	select ARCH_MXC_AUDMUX_V2
 	select ARCH_SUPPORTS_MSI
 	select ARM_GIC
 	select ARCH_HAS_CPUFREQ
 	select OC_ETM
-	select IMX_HAVE_PLATFORM_IMX_UART
-	select IMX_HAVE_PLATFORM_FEC
-	select IMX_HAVE_PLATFORM_IMX_ANATOP_THERMAL
-	select IMX_HAVE_PLATFORM_IMX_IPUV3
-	select IMX_HAVE_PLATFORM_MXC_PWM
-	select IMX_HAVE_PLATFORM_LDB
-	select IMX_HAVE_PLATFORM_IMX_SPDIF
-	select IMX_HAVE_PLATFORM_IMX_VDOA
 
 config FORCE_MAX_ZONEORDER
     int "MAX_ORDER"
@@ -32,6 +22,13 @@ config MACH_MX6Q_ARM2
 	bool "Support i.MX 6Quad Armadillo2 platform"
 	select ARCH_MX6Q
 	select SOC_IMX6Q
+	select IMX_HAVE_PLATFORM_IMX_IPUV3
+	select IMX_HAVE_PLATFORM_MXC_PWM
+	select IMX_HAVE_PLATFORM_LDB
+	select IMX_HAVE_PLATFORM_IMX_SPDIF
+	select IMX_HAVE_PLATFORM_IMX_VDOA
+	select USB_ARCH_HAS_EHCI
+	select ARCH_MXC_AUDMUX_V2
 	select IMX_HAVE_PLATFORM_IMX_UART
 	select IMX_HAVE_PLATFORM_DMA
 	select IMX_HAVE_PLATFORM_FEC
@@ -76,6 +73,13 @@ config MACH_MX6SL_ARM2
 	bool "Support i.MX 6SoloLite Armadillo2 platform"
 	select ARCH_MX6Q
 	select SOC_IMX6SL
+	select IMX_HAVE_PLATFORM_IMX_IPUV3
+	select IMX_HAVE_PLATFORM_MXC_PWM
+	select IMX_HAVE_PLATFORM_LDB
+	select IMX_HAVE_PLATFORM_IMX_SPDIF
+	select IMX_HAVE_PLATFORM_IMX_VDOA
+	select USB_ARCH_HAS_EHCI
+	select ARCH_MXC_AUDMUX_V2
 	select IMX_HAVE_PLATFORM_IMX_UART
 	select IMX_HAVE_PLATFORM_DMA
 	select IMX_HAVE_PLATFORM_FEC
@@ -113,6 +117,12 @@ config MACH_MX6SL_EVK
 	bool "Support i.MX 6SoloLite EVK platform"
 	select ARCH_MX6Q
 	select SOC_IMX6SL
+	select IMX_HAVE_PLATFORM_IMX_IPUV3
+	select IMX_HAVE_PLATFORM_MXC_PWM
+	select IMX_HAVE_PLATFORM_LDB
+	select IMX_HAVE_PLATFORM_IMX_SPDIF
+	select IMX_HAVE_PLATFORM_IMX_VDOA
+	select USB_ARCH_HAS_EHCI
 	select IMX_HAVE_PLATFORM_IMX_UART
 	select IMX_HAVE_PLATFORM_DMA
 	select IMX_HAVE_PLATFORM_FEC
@@ -151,6 +161,13 @@ config MACH_MX6Q_SABRELITE
 	bool "Support i.MX 6Quad SABRE Lite platform"
 	select ARCH_MX6Q
 	select SOC_IMX6Q
+	select IMX_HAVE_PLATFORM_IMX_IPUV3
+	select IMX_HAVE_PLATFORM_MXC_PWM
+	select IMX_HAVE_PLATFORM_LDB
+	select IMX_HAVE_PLATFORM_IMX_SPDIF
+	select IMX_HAVE_PLATFORM_IMX_VDOA
+	select USB_ARCH_HAS_EHCI
+	select ARCH_MXC_AUDMUX_V2
 	select IMX_HAVE_PLATFORM_IMX_UART
 	select IMX_HAVE_PLATFORM_DMA
 	select IMX_HAVE_PLATFORM_FEC
@@ -184,6 +201,13 @@ config MACH_MX6Q_SABRESD
 	bool "Support i.MX 6Quad SABRESD platform"
 	select ARCH_MX6Q
 	select SOC_IMX6Q
+	select IMX_HAVE_PLATFORM_IMX_IPUV3
+	select IMX_HAVE_PLATFORM_MXC_PWM
+	select IMX_HAVE_PLATFORM_LDB
+	select IMX_HAVE_PLATFORM_IMX_SPDIF
+	select IMX_HAVE_PLATFORM_IMX_VDOA
+	select USB_ARCH_HAS_EHCI
+	select ARCH_MXC_AUDMUX_V2
 	select IMX_HAVE_PLATFORM_IMX_UART
 	select IMX_HAVE_PLATFORM_DMA
 	select IMX_HAVE_PLATFORM_FEC
@@ -218,6 +242,13 @@ config MACH_MX6Q_SABREAUTO
 	bool "Support i.MX 6Quad SABRE Auto platform"
 	select ARCH_MX6Q
 	select SOC_IMX6Q
+	select IMX_HAVE_PLATFORM_IMX_IPUV3
+	select IMX_HAVE_PLATFORM_MXC_PWM
+	select IMX_HAVE_PLATFORM_LDB
+	select IMX_HAVE_PLATFORM_IMX_SPDIF
+	select IMX_HAVE_PLATFORM_IMX_VDOA
+	select USB_ARCH_HAS_EHCI
+	select ARCH_MXC_AUDMUX_V2
 	select IMX_HAVE_PLATFORM_IMX_UART
 	select IMX_HAVE_PLATFORM_DMA
 	select IMX_HAVE_PLATFORM_FEC
@@ -284,14 +315,17 @@ config MACH_MX6Q_HDMIDONGLE
 
 config MACH_WANDBOARD
 	bool "Support for the WandBoard"
+	select ARCH_MX6Q
 	select SOC_IMX6Q
-	select ARCH_MXC_IOMUX_V3
-	select ARM_GIC
-	select OC_ETM
-	select ARCH_HAS_CPUFREQ
 	select IMX_HAVE_PLATFORM_DMA if IMX_SDMA
 	select IMX_HAVE_PLATFORM_IMX_UART if SERIAL_IMX
 	select IMX_HAVE_PLATFORM_SDHCI_ESDHC_IMX if MMC_SDHCI_ESDHC_IMX
+	select IMX_HAVE_PLATFORM_IMX_I2C if I2C_IMX
+	select IMX_HAVE_PLATFORM_IMX_ASRC if SND_IMX_SOC
+	select ARCH_MXC_AUDMUX_V2 if SND_IMX_SOC
+	select IMX_HAVE_PLATFORM_IMX_SSI if MXC_SSI
+	select IMX_HAVE_PLATFORM_IMX_ESAI if MXC_SSI
+	select IMX_HAVE_PLATFORM_IMX_SPDIF if SND_SOC_IMX_SPDIF
 	help
 	  Include support for the WandBoard SoM.
 
