Wandboard : add SSI to default config

--- a/arch/arm/configs/wandboard_defconfig
+++ b/arch/arm/configs/wandboard_defconfig
@@ -243,6 +243,8 @@ CONFIG_ARCH_MXC=y
 CONFIG_IMX_HAVE_PLATFORM_DMA=y
 CONFIG_IMX_HAVE_PLATFORM_IMX_CAAM=y
 CONFIG_IMX_HAVE_PLATFORM_IMX_I2C=y
+CONFIG_IMX_HAVE_PLATFORM_IMX_SSI=y
+CONFIG_IMX_HAVE_PLATFORM_IMX_ESAI=y
 CONFIG_IMX_HAVE_PLATFORM_IMX_UART=y
 CONFIG_IMX_HAVE_PLATFORM_SDHCI_ESDHC_IMX=y
 
@@ -257,6 +259,7 @@ CONFIG_IMX_HAVE_PLATFORM_SDHCI_ESDHC_IMX=y
 # CONFIG_ARCH_MX51 is not set
 CONFIG_ARCH_MX6=y
 CONFIG_FORCE_MAX_ZONEORDER=14
+CONFIG_ARCH_MX6Q=y
 CONFIG_SOC_IMX6Q=y
 # CONFIG_MACH_MX6Q_ARM2 is not set
 # CONFIG_MACH_MX6SL_ARM2 is not set
@@ -344,6 +347,7 @@ CONFIG_TICK_ONESHOT=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_GENERIC_CLOCKEVENTS_BUILD=y
+# CONFIG_SMP is not set
 # CONFIG_VMSPLIT_3G is not set
 CONFIG_VMSPLIT_2G=y
 # CONFIG_VMSPLIT_1G is not set
@@ -819,7 +823,7 @@ CONFIG_CLKSRC_MMIO=y
 #
 # MXC SSI support
 #
-# CONFIG_MXC_SSI is not set
+CONFIG_MXC_SSI=y
 
 #
 # MXC Digital Audio Multiplexer support
@@ -871,6 +875,7 @@ CONFIG_CLKSRC_MMIO=y
 #
 # MXC Media Local Bus Driver
 #
+# CONFIG_MXC_MLB150 is not set
 
 #
 # i.MX ADC support
