Wandboard : Enable zone DMA when not using ION (i.e. non-Android) (cherry picked from commit 8d5d7282de02a8d3a0f07477f10ce16092ed7c8f)

--- a/arch/arm/mach-mx6/Kconfig
+++ b/arch/arm/mach-mx6/Kconfig
@@ -341,6 +341,7 @@ config MACH_WANDBOARD
 	select IMX_HAVE_PLATFORM_IMX_VPU if MXC_VPU
 	select IMX_HAVE_PLATFORM_IMX_MIPI_DSI if VIDEO_MXC_IPU_OUTPUT
 	select IMX_HAVE_PLATFORM_IMX_PCIE if IMX_PCIE
+	select ZONE_DMA if ION=n
 	help
 	  Include support for the WandBoard SoM.
 
