Wandboard : Add LVDS suppport to Wandboard Kconfig (cherry picked from commit c7ea81f51be658c15744eb856c2d02fa9f000eb3)

--- a/arch/arm/mach-mx6/Kconfig
+++ b/arch/arm/mach-mx6/Kconfig
@@ -342,6 +342,8 @@ config MACH_WANDBOARD
 	select IMX_HAVE_PLATFORM_IMX_MIPI_DSI if VIDEO_MXC_IPU_OUTPUT
 	select IMX_HAVE_PLATFORM_IMX_PCIE if IMX_PCIE
 	select ZONE_DMA if ION=n
+	select IMX_HAVE_PLATFORM_LDB if FB_MXC_LDB
+	select IMX_HAVE_PLATFORM_IMX_VDOA if MXC_IPU_V3
 	help
 	  Include support for the WandBoard SoM.
 
