Wandboard : Add SATA support (cherry picked from commit cc865171a19a0e84dc26a4285faf7ca75ca8403d)

--- a/arch/arm/mach-mx6/Kconfig
+++ b/arch/arm/mach-mx6/Kconfig
@@ -344,6 +344,7 @@ config MACH_WANDBOARD
 	select ZONE_DMA if ION=n
 	select IMX_HAVE_PLATFORM_LDB if FB_MXC_LDB
 	select IMX_HAVE_PLATFORM_IMX_VDOA if MXC_IPU_V3
+        select IMX_HAVE_PLATFORM_AHCI if SATA_AHCI_PLATFORM
 	help
 	  Include support for the WandBoard SoM.
 
