config: Disable Seiko LCD support
Signed-off-by: Otavio Salvador <otavio@ossystems.com.br>
(cherry picked from commit e2458ff5e914ce2de834041b4712fb2ac38cffe5)

--- a/arch/arm/configs/wandboard_defconfig
+++ b/arch/arm/configs/wandboard_defconfig
@@ -1474,7 +1474,7 @@ CONFIG_FB_MXC_SYNC_PANEL=y
 CONFIG_FB_MXC_LDB=y
 # CONFIG_FB_MXC_MIPI_DSI is not set
 # CONFIG_FB_MXC_CLAA_WVGA_SYNC_PANEL is not set
-CONFIG_FB_MXC_SEIKO_WVGA_SYNC_PANEL=y
+# CONFIG_FB_MXC_SEIKO_WVGA_SYNC_PANEL is not set
 # CONFIG_FB_MXC_SII902X is not set
 # CONFIG_FB_MXC_CH7026 is not set
 # CONFIG_FB_MXC_TVOUT_CH7024 is not set
